--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-    </head>
-    <body>
-        Ola Mundo é o Caralho !!!
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Programação Web e Mobile</title>
+  </head>
+
+  <body>
+    <h1>Exercícios: </h1>
+    <ol>
+        <li><a href="exercicios/cadastro.html">Cadastro de Usuário</li>
+        <li><a href="exercicios/minha-rotina.html">Minha Rotina - HTML</li>
+    </ol>
+  </body>
 
 </html>
