--- a/exercicios/cadastro.html
+++ b/exercicios/cadastro.html
@@ -2,49 +2,63 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
 </head>
 <body>
+    <h1>Cadastro de Usuário</h1>
 
     <form action="#" method="post">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome">
 
+        <br><br>
+
         <label for="email">E-mail:</label>
         <input type="email" id="email" name="email">
+
+        <br><br>
 
         <label for="senha">Senha:</label>
         <input type="password" id="senha" name="senha">
 
+        <br><br>
+
         <label for="nascimento">Data de nascimento:</label>
         <input type="date" id="nascimento" name="nascimento">
 
+        <br><br>
+
         <label for="sexo">Sexo:</label>
         <select id="sexo" name="sexo">
-
             <option value="masculino">Masculino</option>
             <option value="feminino">Feminino</option>
             <option value="outro">Outro</option>
-
         </select>
+
+        <br><br>
 
         <label for="estado">Estado:</label>
         <select id="estado" name="estado">
-
             <option value="sp">São Paulo</option>
             <option value="rj">Rio de Janeiro</option>
             <option value="mg">Minas Gerais</option>
             <option value="pe">Pernambuco</option>
             <option value="outro">Outro</option>
-
         </select>
 
+        <br><br>
 
-
+        <button type="submit">Cadastrar</button>
     </form>
 
+    <br>
 
-
-
+    <p>Confira o código no GitHub: 
+        <a href="https://github.com/rafaelsampa/Disciplina_Web_Mobile/blob/main/exercicios/cadastro.html" target="_blank">Repositório</a>
+    </p>
+    <p>Veja o site publicado: 
+        <a href="disciplina-web-mobile.vercel.app" target="_blank">Página Online</a>
+    </p>
 </body>
 </html>
