testando problema no link

--- a/exercicios/cadastro.html
+++ b/exercicios/cadastro.html
@@ -58,7 +58,7 @@
         <a href="https://github.com/rafaelsampa/Disciplina_Web_Mobile/blob/main/exercicios/cadastro.html" target="_blank">Repositório</a>
     </p>
     <p>Veja o site publicado: 
-        <a href="disciplina-web-mobile.vercel.app" target="_blank">Página Online</a>
+        <a href="https://disciplina-web-mobile.vercel.app" target="_blank">Página Online</a>
     </p>
 </body>
 </html>
