Adicionar requisitos até o slide 48

--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -5,12 +5,14 @@
         <title>Rafael Sampaio e Silva</title>
     </head>
     <body>
-        <h1>Minha Rotina</h1>
+        <h1>Rafael</h1>
+        <hr>
         <p>
             Com a ajuda do meu celular um alarme me acorda as 5 horas, eu levando  
             e custumo ir direto tomar banho. De maneira geral eu não tomo café da manhã, 
             então acabo ou só comendo besteira na faculdade, ou só no almoço. 
             
         </p>
+
     </body>
 </html>
