--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   </head>
 
   <body>
-    <h1>Exercícios: </h1>
+    <h1>Programação Web e Mobile (UNICAP 2025.1)</h1>
+
+    <br><br>
+
+    <h3>Todos os exercícios: </h3>
     <ol>
         <li><a href="exercicios/cadastro.html">Cadastro de Usuário</li>
         <li><a href="exercicios/minha-rotina.html">Minha Rotina - HTML</li>
