--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -10,9 +10,25 @@
         <p>
             Com a ajuda do meu celular um alarme me acorda as 5 horas, eu levando  
             e custumo ir direto tomar banho. De maneira geral eu não tomo café da manhã, 
-            então acabo ou só comendo besteira na faculdade, ou só no almoço. 
+            então acabo ou só comendo besteira na faculdade, ou só no almoço. Depois disso eu só desço o elevador 
+            dirigo até a faculdade, tenho custume de nao ir direto para frente da sala pois chego muito cedo, por volta 
+            das 6:20. Quando da 7:10 eu vou para a primeira aula e o dia segue normalmente atédar 12h50, todos largarem 
+            para almoçar e/ou ir para casa. 
             
         </p>
+
+        <p>
+           Essa foi uma basqueteira muito importante para mim pois foi a minha primeira basqueteira, ao menos a primeira desde 
+           eu havia entrado para a equipe de basquete so colégio. Infelizmente, ela fez o seu trabalho e servio bem até seus últimos dias 
+           eu admito que eu nao queria joga-la fora, mas meus pais insistiram que eu precisava, pois já estava na hora. Foi um momento 
+           especial que felizmente meu pai(o que esta filmando) filmou. Até mais !
+        </p>
+
+        <video src="Assets/aposentando-basqueteira.mp4" controls>
+            teste
+        </video>
+
+
 
     </body>
 </html>
