Segundo teste do video

--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -24,9 +24,17 @@
            especial que felizmente meu pai(o que esta filmando) filmou. Até mais !
         </p>
 
-        <video src="Assets/aposentando-basqueteira.mp4" controls>
-            teste
+        <video controls autoplay>
+            <source src="./Assets/aposentando-basqueteira.mp4" type="video/mp4">
+            <source src="./Assets/aposentando-basqueteira.webm" type="video/webm">
+
         </video>
+
+        <br><br>
+
+        <audio src="./Assets/adventure-time-theme.mp3" controls>
+            
+        </audio>
 
 
 
