teste de video e ajustes com imgs

--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -13,7 +13,10 @@
             então acabo ou só comendo besteira na faculdade, ou só no almoço. Depois disso eu só desço o elevador 
             dirigo até a faculdade, tenho custume de nao ir direto para frente da sala pois chego muito cedo, por volta 
             das 6:20. Quando da 7:10 eu vou para a primeira aula e o dia segue normalmente atédar 12h50, todos largarem 
-            para almoçar e/ou ir para casa. 
+            para almoçar e/ou ir para casa. Nesse pique, quando eu chego em casa eu almoço, tomo um banho e vou dar um cochilada 
+            até dar a hora de passear com o cachorro. Depois que eu saio com Loly(minha dog), eu começo a estudar para a univercidade 
+            até dar a hora de jantar. Por fim, eu janto, reviso mais algumas coisas até dar sono, depois vou direto para a cama 
+            deitar e ficar mechendo no celular até dormir.
             
         </p>
 
@@ -27,12 +30,12 @@
         <video controls autoplay>
             <source src="./aposentando-basqueteira.mp4" type="video/mp4">
             <source src="./aposentando-basqueteira.webm" type="video/webm">
-
+            Seu navegador não suporta videos
         </video>
 
         <br><br>
 
-        <audio src="./Assets/adventure-time-theme.mp3" controls>
+        <audio src="./Assets/adventure-time-theme.mp3" loop>
             
         </audio>
 
