--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -5,7 +5,8 @@
         <title>Rafael Sampaio e Silva</title>
     </head>
     <body>
-        <h1>Rafael</h1>
+        <h1>Minha Rotina</h1>
+        <h2>Rafael</h2>
         <hr>
         <p>
             Com a ajuda do meu celular um alarme me acorda as 5 horas, eu levando  
@@ -28,8 +29,8 @@
         </p>
 
         <video controls autoplay>
-            <source src="./aposentando-basqueteira.mp4" type="video/mp4">
-            <source src="./aposentando-basqueteira.webm" type="video/webm">
+            <source src="/workspaces/Disciplina_Web_Mobile/Assets/aposentando-basqueteira.mp4" type="video/mp4">
+            <source src="/workspaces/Disciplina_Web_Mobile/Assets/aposentando-basqueteira2.webm" type="video/webm">
             Seu navegador não suporta videos
         </video>
 
