--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -29,8 +29,7 @@
         </p>
 
         <video controls autoplay>
-            <source src="/workspaces/Disciplina_Web_Mobile/Assets/aposentando-basqueteira.mp4" type="video/mp4">
-            <source src="/workspaces/Disciplina_Web_Mobile/Assets/aposentando-basqueteira2.webm" type="video/webm">
+            <source src="../Assets/aposentando-basqueteira.mp4" type="video/mp4">
             Seu navegador não suporta videos
         </video>
 
