--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -28,10 +28,13 @@
            especial que felizmente meu pai(o que esta filmando) filmou. Até mais !
         </p>
 
-        <video controls autoplay width="500">
-            <source src="../Assets/aposentando-basqueteira.mp4" type="video/mp4">
-            Seu navegador não suporta videos
-        </video>
+        <center>
+            <video controls autoplay width="600">
+                <source src="../Assets/aposentando-basqueteira.mp4" type="video/mp4">
+                Seu navegador não suporta videos
+            </video>
+        </center>
+
 
         <br><br>
 
