--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -38,9 +38,17 @@
 
         <br><br>
 
-        <audio src="./Assets/adventure-time-theme.mp3" loop>
+        <p>
+            Essa aqui é a música tema da abertura do meu desenho favorito, hora de aventura. Quando a escuto eu sindo uma nostalgia 
+            muito forte, realmente memórias de uma infancia bem vivida.
+        </p>
+
+        <center>
+            <audio src="../Assets/adventure-time-theme.mp3" controls>
             
-        </audio>
+            </audio>
+        </center>
+ 
 
 
 
