finalizando até PG61

--- a/exercicios/cadastro.html
+++ b/exercicios/cadastro.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Usuário</title>
 </head>
+
 <body>
     <h1>Cadastro de Usuário</h1>
 
@@ -40,25 +42,29 @@
 
         <label for="estado">Estado:</label>
         <select id="estado" name="estado">
-            <option value="sp">São Paulo</option>
+            <option value="sp">Bahia</option>
             <option value="rj">Rio de Janeiro</option>
-            <option value="mg">Minas Gerais</option>
-            <option value="pe">Pernambuco</option>
+            <option value="mg">Amapá</option>
+            <option value="pe">Meu país Pernambuco</option>
             <option value="outro">Outro</option>
         </select>
 
         <br><br>
 
-        <button type="submit">Cadastrar</button>
+        <button type="submit">Confirmar</button>
+        
     </form>
 
     <br>
 
-    <p>Confira o código no GitHub: 
+    <p>Código no GitHub: 
         <a href="https://github.com/rafaelsampa/Disciplina_Web_Mobile/blob/main/exercicios/cadastro.html" target="_blank">Repositório</a>
     </p>
-    <p>Veja o site publicado: 
+
+    <p>Publicado via Vercel, aqui esta o link: 
         <a href="https://disciplina-web-mobile.vercel.app" target="_blank">Página Online</a>
     </p>
+
 </body>
+
 </html>
