--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -22,14 +22,14 @@
         </p>
 
         <p>
-           Essa foi uma basqueteira muito importante para mim pois foi a minha primeira basqueteira, ao menos a primeira desde 
+           Esse video que eu escolhi é sobre uma basqueteira muito importante para mim pois foi a minha primeira basqueteira, ao menos a primeira desde 
            eu havia entrado para a equipe de basquete so colégio. Infelizmente, ela fez o seu trabalho e servio bem até seus últimos dias 
            eu admito que eu nao queria joga-la fora, mas meus pais insistiram que eu precisava, pois já estava na hora. Foi um momento 
            especial que felizmente meu pai(o que esta filmando) filmou. Até mais !
         </p>
 
         <center>
-            <video controls autoplay width="600">
+            <video controls width="600">
                 <source src="../Assets/aposentando-basqueteira.mp4" type="video/mp4">
                 Seu navegador não suporta videos
             </video>
@@ -39,12 +39,12 @@
         <br><br>
 
         <p>
-            Essa aqui é a música tema da abertura do meu desenho favorito, hora de aventura. Quando a escuto eu sindo uma nostalgia 
+            O arquivo de audio que eu escolhi aqui é a música tema da abertura do meu desenho favorito, hora de aventura. Quando a escuto eu sinto uma nostalgia 
             muito forte, realmente memórias de uma infancia bem vivida.
         </p>
 
         <center>
-            <audio src="../Assets/adventure-time-theme.mp3" controls>
+            <audio src="../Assets/adventure-time-theme.mp3" controls loop>
             
             </audio>
         </center>
