--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -9,20 +9,20 @@
         <h2>Rafael</h2>
         <hr>
         <p>
-            Com a ajuda do meu celular um alarme me acorda as 5 horas, eu levando  
+            Com a ajuda do meu celular um alarme me acorda as <b>5 horas</b>, eu levando  
             e custumo ir direto tomar banho. De maneira geral eu não tomo café da manhã, 
             então acabo ou só comendo besteira na faculdade, ou só no almoço. Depois disso eu só desço o elevador 
             dirigo até a faculdade, tenho custume de nao ir direto para frente da sala pois chego muito cedo, por volta 
             das 6:20. Quando da 7:10 eu vou para a primeira aula e o dia segue normalmente atédar 12h50, todos largarem 
             para almoçar e/ou ir para casa. Nesse pique, quando eu chego em casa eu almoço, tomo um banho e vou dar um cochilada 
-            até dar a hora de passear com o cachorro. Depois que eu saio com Loly(minha dog), eu começo a estudar para a univercidade 
+            até dar a hora de passear com o <b>cachorro</b>. Depois que eu saio com Loly(minha dog), eu começo a estudar para a univercidade 
             até dar a hora de jantar. Por fim, eu janto, reviso mais algumas coisas até dar sono, depois vou direto para a cama 
-            deitar e ficar mechendo no celular até dormir.
+            deitar e ficar mechendo no celular até <b>dormir</b>.
             
         </p>
 
         <p>
-           Esse video que eu escolhi é sobre uma basqueteira muito importante para mim pois foi a minha primeira basqueteira, ao menos a primeira desde 
+           Esse video que eu escolhi é sobre uma <b>basqueteira muito</b> importante para mim pois foi a minha primeira basqueteira, ao menos a primeira desde 
            eu havia entrado para a equipe de basquete so colégio. Infelizmente, ela fez o seu trabalho e servio bem até seus últimos dias 
            eu admito que eu nao queria joga-la fora, mas meus pais insistiram que eu precisava, pois já estava na hora. Foi um momento 
            especial que felizmente meu pai(o que esta filmando) filmou. Até mais !
@@ -39,8 +39,8 @@
         <br><br>
 
         <p>
-            O arquivo de audio que eu escolhi aqui é a música tema da abertura do meu desenho favorito, hora de aventura. Quando a escuto eu sinto uma nostalgia 
-            muito forte, realmente memórias de uma infancia bem vivida.
+            O arquivo de audio que eu escolhi aqui é a música tema da abertura do meu desenho favorito, <b>hora de aventura</b>. Quando a escuto eu sinto uma nostalgia 
+            muito forte, <i>realmente memórias de uma infancia bem vivida</i>.
         </p>
 
         <center>
@@ -48,6 +48,8 @@
             
             </audio>
         </center>
+
+        <p> <i>Para viver a vida, você precisa de problemas. Se você tiver tudo o que deseja no minuto em que deseja, qual é o sentido de viver?</i></p>
  
 
 
