--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -49,7 +49,7 @@
             </audio>
         </center>
 
-        <p> <i>Para viver a vida, você precisa de problemas. Se você tiver tudo o que deseja no minuto em que deseja, qual é o sentido de viver?</i></p>
+        <p> <i> "Para viver a vida, você precisa de problemas. Se você tiver tudo o que deseja no minuto em que deseja, qual é o sentido de viver?" - Jake, o Cão</i></p>
  
 
 
