--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -51,7 +51,11 @@
 
         <p> <i> "Para viver a vida, você precisa de problemas. Se você tiver tudo o que deseja no minuto em que deseja, qual é o sentido de viver?" - Jake, o Cão</i></p>
  
+        <br><br><br>
 
+        <p> <b>Caso queira entrar em contato: </b> 
+            <a href="exercicios/contato.html" target="_blank">Lista de Contato</a>
+        </p>
 
 
     </body>
