--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <h1>Programação Web e Mobile (UNICAP 2025.1)</h1>
     <hr>
     
-    <br><br>
+    <br>
 
-    <h3>Todos os exercícios: </h3>
+    
+
+    <h3>Todos os exercícios solicitados: </h3>
+
     <ol>
-        <li><a href="exercicios/cadastro.html">Cadastro de Usuário</li>
-        <li><a href="exercicios/minha-rotina.html">Minha Rotina - HTML</li>
+      <li><a href="exercicios/cadastro.html">Cadastro de Usuário</li>
+      <li><a href="exercicios/minha-rotina.html">Minha Rotina - HTML</li>
+      <li><a href="exercicios/contato.html">Minha Rotina - HTML</li>
+
     </ol>
   </body>
 
