--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     
     <br>
 
-    
+
 
     <h3>Todos os exercícios solicitados: </h3>
 
     <ol>
       <li><a href="exercicios/cadastro.html">Cadastro de Usuário</li>
       <li><a href="exercicios/minha-rotina.html">Minha Rotina - HTML</li>
-      <li><a href="exercicios/contato.html">Minha Rotina - HTML</li>
+      <li><a href="exercicios/contato.html">Contato comigo</li>
 
     </ol>
   </body>
