--- a/exercicios/contato.html
+++ b/exercicios/contato.html
@@ -15,6 +15,10 @@
             <a href="https://www.linkedin.com/in/rafael-in-a-nutshell/" target="_blank"><img src="./Assets/linkedin_img_icon.png" />Linkedin</a>
 
         </nav>
+
+        <p>
+            <b>E-mail:</b> rafael.sampaio.silva@gmail.com
+        </p>
     
     </body>
 </html>
