--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -54,7 +54,7 @@
         <br><br><br>
 
         <p> <b>Caso queira entrar em contato: </b> 
-            <a href="exercicios/contato.html" target="_blank">Lista de Contato</a>
+            <a href="contato.html" target="_blank">Lista de Contato</a>
         </p>
 
 
