--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -50,7 +50,11 @@
         </center>
 
         <p> <i> "Para viver a vida, você precisa de problemas. Se você tiver tudo o que deseja no minuto em que deseja, qual é o sentido de viver?" - Jake, o Cão</i></p>
- 
+        
+        <br><br><br>
+
+        <img src="../Assets/sem-contexto.jpeg" alt="Sem problemas">
+
         <br><br><br>
 
         <p> <b>Caso queira entrar em contato: </b> 
