--- a/exercicios/contato.html
+++ b/exercicios/contato.html
@@ -10,9 +10,11 @@
         <p> Caso haja QUALQUER assunto para conversar comigo, aqui esta meus meios de contato. Sinta-se livre para mandar sua mensagem em qualquer um deles</p>
         <nav>
             
-            <a href="https://github.com/rafaelsampa" target="_blank"><img src="./Assets/github_icon.png" />GitHub</a>
-            <a href="https://www.instagram.com/_rafaelsampa/" target="_blank"><img src="./Assets/instagram_img_icon.jpeg" />Instagram</a>
-            <a href="https://www.linkedin.com/in/rafael-in-a-nutshell/" target="_blank"><img src="./Assets/linkedin_img_icon.png" />Linkedin</a>
+            <a href="https://github.com/rafaelsampa" target="_blank">
+                <img src="../Assets/github_icon.png" alt="Ícone do GitHub" />GitHub
+            </a>
+            <a href="https://www.instagram.com/_rafaelsampa/" target="_blank"><img src="../Assets/instagram_img_icon.jpeg" />Instagram</a>
+            <a href="https://www.linkedin.com/in/rafael-in-a-nutshell/" target="_blank"><img src="../Assets/linkedin_img_icon.png" />Linkedin</a>
 
         </nav>
 
