--- a/exercicios/minha-rotina.html
+++ b/exercicios/minha-rotina.html
@@ -53,7 +53,7 @@
         
         <br><br><br>
 
-        <img src="../Assets/sem-contexto.jpeg" alt="Sem problemas">
+        <img src="../Assets/sem-contexto.jpeg" alt="Sem problemas" width="800">
 
         <br><br><br>
 
