--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <h3>Todos os exercícios solicitados: </h3>
 
     <ol>
-      <li><a href="exercicios/cadastro.html">Cadastro de Usuário</li>
-      <li><a href="exercicios/minha-rotina.html">Minha Rotina - HTML</li>
-      <li><a href="exercicios/contato.html">Contato comigo</li>
-
+      <li><a href="exercicios/exercicio1/cadastro.html">Cadastro de Usuário</li>
+      <li><a href="exercicios/exercicio1/minha-rotina.html">Minha Rotina - HTML</li>
+      <li><a href="exercicios/curriculo-portifolio/portifolio.html">Portifolio</li>
+      <li><a href="exercicios/exercicio1/contato.html">Contato comigo</li>
     </ol>
   </body>
 
