hadder e css test

--- a/exercicios/curriculo-portifolio/portifolio.html
+++ b/exercicios/curriculo-portifolio/portifolio.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
     <head>
-        <meta charset="UTF-8"/>
-        <title>Rafael's Portfolio</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Portfólio do Rafael</title>
     </head>
     <body>
-
-
+        <header>
+            <div class="logo">Rafael</div>
+            <nav>
+                <ul>
+                    <li><a href="#exercicios">Exercícios</a></li>
+                    <li><a href="#jogo-numeros">Jogo de Números</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <main>
+            <section id="exercicios">
+                <h2>Exercícios</h2>
+                <!-- Adicione seu conteúdo de exercícios aqui -->
+            </section>
+            <section id="jogo-numeros">
+                <h2>Jogo de Números</h2>
+                <!-- Adicione o conteúdo do jogo aqui -->
+            </section>
+        </main>
     </body>
 </html>
