--- a/exercicios/curriculo-portifolio/curriculo.html
+++ b/exercicios/curriculo-portifolio/curriculo.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículo - Rafael</title>
+    <title>Projetos - Rafael</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <h1>Hi, my name is Rafael</h1>
+            <h1>Meus Projetos</h1>
             <div class="social-icons">
                 <a href="https://github.com/seu-github" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/seu-linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -19,29 +19,57 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="curriculo.html">Currículo</a></li>
+                <li><a href="curriculo.html">Projetos</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="section">
-            <h2>Meus Projetos</h2>
-            <div class="projects-container">
+            <div class="projects-grid">
                 <div class="project-card">
-                    <img src="imagem-projeto1.jpg" alt="Projeto 1">
-                    <h3>Projeto 1</h3>
-                    <p>Descrição breve do projeto 1</p>
+                    <div class="project-image">
+                        <img src="imagem-projeto1.jpg" alt="Projeto 1">
+                    </div>
+                    <div class="project-info">
+                        <h3>Projeto 1</h3>
+                        <p>Descrição detalhada do projeto 1. Aqui você pode incluir as tecnologias utilizadas, desafios enfrentados e resultados alcançados.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="project-card">
-                    <img src="imagem-projeto2.jpg" alt="Projeto 2">
-                    <h3>Projeto 2</h3>
-                    <p>Descrição breve do projeto 2</p>
+                    <div class="project-image">
+                        <img src="imagem-projeto2.jpg" alt="Projeto 2">
+                    </div>
+                    <div class="project-info">
+                        <h3>Projeto 2</h3>
+                        <p>Descrição detalhada do projeto 2. Aqui você pode incluir as tecnologias utilizadas, desafios enfrentados e resultados alcançados.</p>
+                        <div class="project-tech">
+                            <span>React</span>
+                            <span>Node.js</span>
+                            <span>MongoDB</span>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="project-card">
-                    <img src="imagem-projeto3.jpg" alt="Projeto 3">
-                    <h3>Projeto 3</h3>
-                    <p>Descrição breve do projeto 3</p>
+                    <div class="project-image">
+                        <img src="imagem-projeto3.jpg" alt="Projeto 3">
+                    </div>
+                    <div class="project-info">
+                        <h3>Projeto 3</h3>
+                        <p>Descrição detalhada do projeto 3. Aqui você pode incluir as tecnologias utilizadas, desafios enfrentados e resultados alcançados.</p>
+                        <div class="project-tech">
+                            <span>Python</span>
+                            <span>Django</span>
+                            <span>PostgreSQL</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
