implementacao da home jogo da senha

--- a/exercicios/curriculo-portifolio/index.html
+++ b/exercicios/curriculo-portifolio/index.html
@@ -12,6 +12,7 @@
         <div class="header-content">
             <h1>Hi, my name is Rafael</h1>
             <div class="social-icons">
+                <a href="jogo-senha.html"><i class="fas fa-gamepad"></i></a>
                 <a href="https://github.com/seu-github" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/seu-linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
@@ -19,18 +20,23 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="curriculo.html">Currículo</a></li>
+                <li><a href="curriculo.html">Projetos</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="section">
-            <div class="content">
+        <section class="about-section">
+            <div class="about-content">
                 <h2>Sobre Mim</h2>
-                <p>Olá! Meu nome é Rafael e sou um desenvolvedor apaixonado por tecnologia. 
-                   Estou sempre buscando aprender novas tecnologias e melhorar minhas habilidades.</p>
-                <p>Atualmente estou cursando [seu curso] na UNICAP e me especializando em desenvolvimento web e mobile.</p>
+                <div class="about-text">
+                    <p>Olá! Meu nome é Rafael e sou um desenvolvedor apaixonado por tecnologia. 
+                       Estou sempre buscando aprender novas tecnologias e melhorar minhas habilidades.</p>
+                    <p>Atualmente estou cursando [seu curso] na UNICAP e me especializando em desenvolvimento web e mobile.</p>
+                    <p>Minha jornada na programação começou [sua história aqui]. Desde então, tenho me dedicado a 
+                       desenvolver soluções criativas e eficientes para diversos desafios.</p>
+                    <p>Além da programação, [suas outras paixões/interesses].</p>
+                </div>
             </div>
         </section>
     </main>
