--- a/exercicios/curriculo-portifolio/index.html
+++ b/exercicios/curriculo-portifolio/index.html
@@ -12,7 +12,7 @@
         <div class="header-content">
             <h1>Hi, my name is Rafael</h1>
             <div class="social-icons">
-                <a href="jogo-senha.html"><i class="fas fa-gamepad"></i></a>
+                <a href="jogo-senha.html" class="game-link">Jogo da Senha</a>
                 <a href="https://github.com/seu-github" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/seu-linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
