--- a/exercicios/curriculo-portifolio/index.html
+++ b/exercicios/curriculo-portifolio/index.html
@@ -30,12 +30,16 @@
             <div class="about-content">
                 <h2>Sobre Mim</h2>
                 <div class="about-text">
-                    <p>Olá! Meu nome é Rafael e sou um desenvolvedor apaixonado por tecnologia. 
-                       Estou sempre buscando aprender novas tecnologias e melhorar minhas habilidades.</p>
-                    <p>Atualmente estou cursando [seu curso] na UNICAP e me especializando em desenvolvimento web e mobile.</p>
-                    <p>Minha jornada na programação começou [sua história aqui]. Desde então, tenho me dedicado a 
-                       desenvolver soluções criativas e eficientes para diversos desafios.</p>
-                    <p>Além da programação, [suas outras paixões/interesses].</p>
+                    <p>Sou estudante de Ciência da Computação, movido por curiosidade e paixão por tecnologia. Me interesso profundamente por
+                    áreas como astroinformática e sistemas embarcados, onde posso unir lógica, hardware e inovação para resolver problemas
+                    do mundo real (ou até fora dele!). Já participei de projetos diversos, desde desafios da NASA até sistemas inteligentes
+                    com Arduino, sempre buscando aplicar meu conhecimento de forma criativa e funcional. Levo comigo o desejo constante de
+                    aprender e me desafiar, explorando desde programação de baixo nível até grandes estruturas de dados.</p>
+                   
+                    <p>Além da tecnologia, tive a chance de fazer um intercâmbio na França — uma experiência incrível que me fez aprender
+                    francês, fazer amizades e expandir meus horizontes. No tempo livre, sou fã de RPG, um hobby que alimenta minha
+                    criatividade e meu gosto por narrativas e estratégia. Gosto de equilibrar teoria e prática, estudo e diversão, e
+                    acredito que são essas vivências que definem meu jeito de pensar e construir projetos.</p>
                 </div>
             </div>
         </section>
