--- a/exercicios/curriculo-portifolio/curriculo.html
+++ b/exercicios/curriculo-portifolio/curriculo.html
@@ -30,45 +30,54 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="imagem-projeto1.jpg" alt="Projeto 1">
+                        <img src="../egg.jpeg" alt="Projeto 1">
                     </div>
                     <div class="project-info">
-                        <h3>Projeto 1</h3>
-                        <p>Descrição detalhada do projeto 1. Aqui você pode incluir as tecnologias utilizadas, desafios enfrentados e resultados alcançados.</p>
+                        <h3>Projeto Robotica</h3>
+                        <p>Recentemente eu e minha parceira Tarsila Amado concluímos
+                             um projeto da cadeira de Robótica Inclusiva, com a orientação
+                              do professor Wilmer yecid Cordoba Nesse projeto construímos
+                               um vaso autoirrigável, a ideia surgiu para ajudar pessoas
+                                com rotinas mais corridas e também idosos a cuidarem de
+                                 plantas sem dificuldades. O sistema usa um sensor de umidade
+                                  para acionar a irrigação automaticamente, adaptando-se às
+                                   necessidades das plantas.
+                        </p>
+                        <p>
+                            Aprendi que tecnologia pode ser simples, mas eficaz. 
+                            A interface permite que o usuário escolha a frequência de irrigação,
+                             e o design do vaso é super prático, com uma parte superior que abre
+                              para ajustes e manutenções. Por isso, chamamos carinhosamente o robô
+                               de “Egg” — pela semelhança com um ovo quebrado.  
+                        </p>
+                        <p>
+                            Fico feliz com o resultado e com tudo que aprendi nesse processo.
+                             E quem sabe, futuramente, podemos adicionar ainda mais funcionalidades
+                              e tornar o projeto ainda mais acessível!
+                        </p>
                         <div class="project-tech">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JavaScript</span>
+                            <span>C++</span>
+                            <span>Arduino UNO</span>
+                            <span>Robotica</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="imagem-projeto2.jpg" alt="Projeto 2">
+                        <img src="../eviroquest-team.jpeg" alt="Projeto 2">
                     </div>
                     <div class="project-info">
-                        <h3>Projeto 2</h3>
-                        <p>Descrição detalhada do projeto 2. Aqui você pode incluir as tecnologias utilizadas, desafios enfrentados e resultados alcançados.</p>
-                        <div class="project-tech">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="imagem-projeto3.jpg" alt="Projeto 3">
-                    </div>
-                    <div class="project-info">
-                        <h3>Projeto 3</h3>
-                        <p>Descrição detalhada do projeto 3. Aqui você pode incluir as tecnologias utilizadas, desafios enfrentados e resultados alcançados.</p>
+                        <h3>Hackaton NASA</h3>
+                        <p>Nosso desafio do NASA Space Apps foi trazer os dados e
+                             descobertas incríveis do satélite PACE para dentro de salas
+                              de aulas. Por isso criamos o EnviroQuest, uma plataforma
+                               divertida e educativa para crianças
+                             aprenderem sobre esses temas enquanto resolvem mistérios !</p>
                         <div class="project-tech">
                             <span>Python</span>
-                            <span>Django</span>
-                            <span>PostgreSQL</span>
+                            <span>Figma</span>
+                            <span>Data Visualization</span>
                         </div>
                     </div>
                 </div>
