--- a/exercicios/curriculo-portifolio/index.html
+++ b/exercicios/curriculo-portifolio/index.html
@@ -30,11 +30,11 @@
             <div class="about-content">
                 <h2>Sobre Mim</h2>
                 <div class="about-text">
-                    <p>Sou estudante de Ciência da Computação, movido por curiosidade e paixão por tecnologia. Me interesso profundamente por
+                    <p>Sou estudante de Ciência da Computação. Me interesso profundamente por
                     áreas como astroinformática e sistemas embarcados, onde posso unir lógica, hardware e inovação para resolver problemas
                     do mundo real (ou até fora dele!). Já participei de projetos diversos, desde desafios da NASA até sistemas inteligentes
                     com Arduino, sempre buscando aplicar meu conhecimento de forma criativa e funcional. Levo comigo o desejo constante de
-                    aprender e me desafiar, explorando desde programação de baixo nível até grandes estruturas de dados.</p>
+                    aprender e me desafiar.</p>
                    
                     <p>Além da tecnologia, tive a chance de fazer um intercâmbio na França — uma experiência incrível que me fez aprender
                     francês, fazer amizades e expandir meus horizontes. No tempo livre, sou fã de RPG, um hobby que alimenta minha
