--- a/exercicios/curriculo-portifolio/curriculo.html
+++ b/exercicios/curriculo-portifolio/curriculo.html
@@ -30,7 +30,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="../egg.jpeg" alt="Projeto 1">
+                        <img src="/Assets/egg.jpeg" alt="Projeto 1">
                     </div>
                     <div class="project-info">
                         <h3>Projeto Robotica</h3>
@@ -65,7 +65,7 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="../eviroquest-team.jpeg" alt="Projeto 2">
+                        <img src="/Assets/eviroquest-team.jpeg" alt="Projeto 2">
                     </div>
                     <div class="project-info">
                         <h3>Hackaton NASA</h3>
