complementos de fontes, css e dependencias

--- a/exercicios/curriculo-portifolio/curriculo.html
+++ b/exercicios/curriculo-portifolio/curriculo.html
@@ -5,22 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos - Rafael</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <h1>Meus Projetos</h1>
+            <h1>Rafael Sampaio</h1>
             <div class="social-icons">
-                <a href="jogo-senha.html" class="game-link">Jogo da Senha</a>
-                <a href="https://github.com/seu-github" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com/in/seu-linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/seu-usuario" target="_blank" title="GitHub">
+                    <span class="material-icons">code</span>
+                </a>
+                <a href="https://linkedin.com/in/seu-usuario" target="_blank" title="LinkedIn">
+                    <span class="material-icons">business</span>
+                </a>
+                <a href="https://instagram.com/seu-usuario" target="_blank" title="Instagram">
+                    <span class="material-icons">photo_camera</span>
+                </a>
+                <a href="jogo-senha.html" class="game-link">
+                    <span class="material-icons">sports_esports</span>
+                    Jogo da Senha
+                </a>
             </div>
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="curriculo.html">Projetos</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="curriculo.html">Currículo</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +59,7 @@
                             A interface permite que o usuário escolha a frequência de irrigação,
                              e o design do vaso é super prático, com uma parte superior que abre
                               para ajustes e manutenções. Por isso, chamamos carinhosamente o robô
-                               de “Egg” — pela semelhança com um ovo quebrado.  
+                               de "Egg" — pela semelhança com um ovo quebrado.  
                         </p>
                         <p>
                             Fico feliz com o resultado e com tudo que aprendi nesse processo.
