--- a/exercicios/curriculo-portifolio/curriculo.html
+++ b/exercicios/curriculo-portifolio/curriculo.html
@@ -13,13 +13,13 @@
             <h1>Rafael Sampaio</h1>
             <div class="social-icons">
                 <a href="https://github.com/seu-usuario" target="_blank" title="GitHub">
-                    <span class="material-icons">code</span>
+                    <img src="../../Assets/github_icon.png" alt="GitHub" class="icon-img">
                 </a>
                 <a href="https://linkedin.com/in/seu-usuario" target="_blank" title="LinkedIn">
-                    <span class="material-icons">business</span>
+                    <img src="../../Assets/linkedin_img_icon.png" alt="LinkedIn" class="icon-img">
                 </a>
                 <a href="https://instagram.com/seu-usuario" target="_blank" title="Instagram">
-                    <span class="material-icons">photo_camera</span>
+                    <img src="../../Assets/instagram_img_icon.jpeg" alt="Instagram" class="icon-img">
                 </a>
                 <a href="jogo-senha.html" class="game-link">
                     <span class="material-icons">sports_esports</span>
