--- a/exercicios/curriculo-portifolio/jogo-senha.html
+++ b/exercicios/curriculo-portifolio/jogo-senha.html
@@ -13,13 +13,13 @@
             <h1>Rafael Sampaio</h1>
             <div class="social-icons">
                 <a href="https://github.com/rafaelsampa" target="_blank" title="GitHub">
-                    <img src="../../Assets/github_icon.png" alt="GitHub" class="icon-img">
+                    <img src="/Assets/github_icon.png" alt="GitHub" class="icon-img">
                 </a>
                 <a href="https://www.linkedin.com/in/rafael-in-a-nutshell/" target="_blank" title="LinkedIn">
-                    <img src="../../Assets/linkedin_img_icon.png" alt="LinkedIn" class="icon-img">
+                    <img src="/Assets/linkedin_img_icon.png" alt="LinkedIn" class="icon-img">
                 </a>
                 <a href="https://instagram.com/_rafaelsampa" target="_blank" title="Instagram">
-                    <img src="../../Assets/instagram_img_icon.jpeg" alt="Instagram" class="icon-img">
+                    <img src="/Assets/instagram_img_icon.jpeg" alt="Instagram" class="icon-img">
                 </a>
                 <a href="index.html" class="game-link">
                     <span class="material-icons">home</span>
