tirando aba portfolio

--- a/exercicios/curriculo-portifolio/curriculo.html
+++ b/exercicios/curriculo-portifolio/curriculo.html
@@ -12,13 +12,13 @@
         <div class="header-content">
             <h1>Rafael Sampaio</h1>
             <div class="social-icons">
-                <a href="https://github.com/seu-usuario" target="_blank" title="GitHub">
+                <a href="https://github.com/rafaelsampa" target="_blank" title="GitHub">
                     <img src="../../Assets/github_icon.png" alt="GitHub" class="icon-img">
                 </a>
-                <a href="https://linkedin.com/in/seu-usuario" target="_blank" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/rafael-in-a-nutshell/" target="_blank" title="LinkedIn">
                     <img src="../../Assets/linkedin_img_icon.png" alt="LinkedIn" class="icon-img">
                 </a>
-                <a href="https://instagram.com/seu-usuario" target="_blank" title="Instagram">
+                <a href="https://instagram.com/_rafaelsampa" target="_blank" title="Instagram">
                     <img src="../../Assets/instagram_img_icon.jpeg" alt="Instagram" class="icon-img">
                 </a>
                 <a href="jogo-senha.html" class="game-link">
@@ -31,7 +31,6 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="curriculo.html">Currículo</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
             </ul>
         </nav>
     </header>
