adicionando imagem engracada

--- a/exercicios/curriculo-portifolio/index.html
+++ b/exercicios/curriculo-portifolio/index.html
@@ -51,6 +51,9 @@
                     criatividade e meu gosto por narrativas e estratégia. Gosto de equilibrar teoria e prática, estudo e diversão, e
                     acredito que são essas vivências que definem meu jeito de pensar e construir projetos.</p>
                 </div>
+                <div class="about-image">
+                    <img src="/Assets/sem-contexto.jpeg" alt="Rafael Sampaio" class="profile-image">
+                </div>
             </div>
         </section>
     </main>
