--- a/exercicios/curriculo-portifolio/jogo-senha.html
+++ b/exercicios/curriculo-portifolio/jogo-senha.html
@@ -21,16 +21,13 @@
                 <a href="https://instagram.com/_rafaelsampa" target="_blank" title="Instagram">
                     <img src="/Assets/instagram_img_icon.jpeg" alt="Instagram" class="icon-img">
                 </a>
-                <a href="index.html" class="game-link">
-                    <span class="material-icons">home</span>
-                    Voltar ao Início
-                </a>
             </div>
         </div>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="curriculo.html">Currículo</a></li>
+                <li><a href="jogo-senha.html">Jogo da Senha</a></li>
             </ul>
         </nav>
     </header>
